2001-09-28  Jonathan Larmour  <jlarmour@redhat.com>

	* src/sa1100mm_flash.c (flash_hwr_init): Only re-enable icache if it
	was enabled before.

2001-06-11  Gary Thomas  <gthomas@redhat.com>

	* src/sa1100mm_flash.c: Remove dependency on printf() via user functions.

2001-05-23  Jesper Skov  <jskov@redhat.com>

	* cdl/flash_sa1100mm.cdl: Needs IO controller to copy functions to
	RAM.

2000-12-05  Jonathan Larmour  <jlarmour@redhat.com>

	* src/sa1100mm_flash.c (flash_code_overlaps): Define stext/etext
	as array types so no assumptions can be made by the compiler about
	location.

2000-10-25  Drew Moseley  <dmoseley@redhat.com>

	* src/sa1100mm_flash.c: New file.  Support for SA1100 Multimedia
	board.
	* src/flash_query.c: Ditto.
	* src/flash_program_buf.c: Ditto.
	* src/flash_erase_block.c: Ditto.
	* src/flash.h: Ditto.
	* cdl/flash_sa1100mm.cdl: Ditto.
	* ChangeLog: Ditto.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros